tests/toylang/neg/000694_mutation.toylang
program a = { a = a program a = { } . a; } .
